# accelerator-solution-zoo

./: .gitignore  README.md
DLBZoo/: README.md
DSAZoo/: README.md  build.txt
DSAZoo/dsa_userlib/: README.md
DSAZoo/dsa_userlib/include/: dsa.h
DSAZoo/dsa_userlib/include/accfg/: idxd.h
DSAZoo/dsa_userlib/include/accfg/.libs/: accel-config
DSAZoo/dsa_userlib/include/util/: log.h  log.lo  sysfs.lo
DSAZoo/dsa_userlib/src/: CMakeLists.txt  dsa.c  libaccfg.c  prep.c
DSAZoo/dsa_userlib/test/: dsa_mt_async.c  dsa_mt_single.c  dsa_mt_vector.c  dsa_test.c
DSAZoo/example_mtcp/: Makefile  Makefile.in  compile_prepare.sh  config.h  config.status  pre_compile.sh  pre_dpdk2203.sh  setup_mtcp_onvm_env.sh
DSAZoo/example_mtcp/apps/example/: epping.c  epwget.c
DSAZoo/example_mtcp/apps/example/config/: arp.conf
DSAZoo/example_mtcp/autom4te.cache/: output.0  traces.0  traces.1  traces.2
DSAZoo/example_mtcp/config/: sample_mtcp.conf
DSAZoo/example_mtcp/io_engine/lib/: Makefile
DSAZoo/example_mtcp/mtcp/src/: Makefile  Makefile.in  addr_pool.c  api.c  dpdk_module.c  eth_in.c  eventpoll.c  ip_out.c  pipe.c  tcp_in.c  tcp_out.c  tcp_stream.c  virtqueue.c
DSAZoo/example_mtcp/mtcp/src/libccp/: ccp.h  (+7 more)
DSAZoo/example_mtcp/util/: Makefile  netlib.c  tdate_parse.c
DSAZoo/example_mtcp/util/include/: netlib.h
IAAZoo/Arrow_Parquet_Reader_with_IAA/: README.md  arrow_rledecode_with_iaa.patch
QATZoo/: README.md
dsa_userlib/: CMakeLists.txt
dsa_userlib/include/: bitops.h  config.h
dsa_userlib/include/accfg/: config.h
dsa_userlib/src/: prep.c
dsa_userlib/test/: CMakeLists.txt  dsa_test.c  dsa_test_async.c  dsa_test_batch.c  dsa_test_vector.c
example_mtcp/: .pre_dpdk2203.sh.swp  Makefile  README  configure  setup_mtcp_dpdk_env.sh  ww-set-hp.sh
example_mtcp/apps/example/: Makefile.in  epping.conf  epserver.c  epserver.conf
example_mtcp/apps/example/config/: route.conf
example_mtcp/apps/perf/: Makefile
example_mtcp/autom4te.cache/: output.1  requests
example_mtcp/mtcp/src/: arp.c  config.c  core.c  io_module.c  ip_in.c  logger.c  onvm_module.c  sfifo.c  tcp_ring_buffer.c  tcp_send_buffer.c
example_mtcp/mtcp/src/include/: mtcp.h  mtcp_api.h  rte_config.h  sfifo.h  tcp_in.h  virtio_ring.h  virtqueue.h
example_mtcp/mtcp/src/libccp/: BUILD.gn  ccp.c  ccp_priv.c  machine.c  serialize.c  serialize.h
(+4 files in other folders)
